; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_multiq3.c_multiq3_set_ctrl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_multiq3.c_multiq3_set_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i64 }

@MULTIQ3_CTRL_SH = common dso_local global i32 0, align 4
@MULTIQ3_CTRL_CLK = common dso_local global i32 0, align 4
@MULTIQ3_CTRL_REG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.comedi_device*, i32)* @multiq3_set_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @multiq3_set_ctrl(%struct.comedi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @MULTIQ3_CTRL_SH, align 4
  %6 = load i32, i32* @MULTIQ3_CTRL_CLK, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* %4, align 4
  %9 = or i32 %7, %8
  %10 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %11 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @MULTIQ3_CTRL_REG, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i32 @outw(i32 %9, i64 %14)
  ret void
}

declare dso_local i32 @outw(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
